--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'printer_status' %}">
+                        <a class="nav-link" href="{% url 'printer_monitor:status' %}">
                             📊 Мониторинг принтеров
                         </a>
                     </li>
