--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,11 @@
                             📊 Мониторинг принтеров
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/network/">
+                            <i class="bi bi-diagram-3 me-1"></i>Сеть
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'equipments:equipment_import' %}">
                             <i class="bi bi-download me-1"></i>Импорт Excel
