--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,16 @@
     <!-- Наши кастомные фоны -->
     <link rel="stylesheet" href="{% static 'css/backgrounds.css' %}">
 
+    <!-- Кастомные стили Equipment Tracker -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    
+    <!-- Блок для дополнительных стилей модулей -->
+    {% block extra_css %}{% endblock %}
+
     <style>
         /* Удалите старый фон, если остался */
     </style>
 </head>
-
 <body class="bg-image">
 
     <!-- Навигация -->
@@ -119,10 +124,16 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS -->
+        <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     {% block scripts %}{% endblock %}
+    
+    <!-- Кастомные скрипты Equipment Tracker -->
+    <script src="{% static 'js/base.js' %}"></script>
+    
+    <!-- Блок для дополнительных скриптов модулей -->
+    {% block extra_js %}{% endblock %}
 </body>
 
 </html>
