--- a/network/templates/network/dashboard.html
+++ b/network/templates/network/dashboard.html
@@ -5,6 +5,7 @@
 {% block title %}Дашборд сети - Equipment Tracker{% endblock %}
 
 {% block content %}
+{% include 'network/_navigation.html' %}
 <div class="container-fluid py-4">
     <div class="row mb-4">
         <div class="col-md-8">
