--- a/static/css/backgrounds.css
+++ b/static/css/backgrounds.css
@@ -16,7 +16,7 @@ body.bg-image::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* Темный слой */
+    background: rgba(211, 211, 211); 
     z-index: -1;
 }
 
